--- a/EmployeeMgmtBackend/EmployeeMgmtBackend/appsettings.json
+++ b/EmployeeMgmtBackend/EmployeeMgmtBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-LJA5IT73;Database=EmployeeMgmtDB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+  }
 }
