feat: add role-based authentication and authorization using JWT with password hashing, secured API routes, and Angular login/logout flow.

--- a/EmployeeMgmtBackend/EmployeeMgmtBackend/appsettings.json
+++ b/EmployeeMgmtBackend/EmployeeMgmtBackend/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-LJA5IT73;Database=EmployeeMgmtDB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
-  }
+  },
+  "JwtKey": "dc094abe4b72d70eccf0fea050c83c32e5c60d4d"
 }
